brat/test/golden/error/vecpat.brat.golden
Error in test/golden/error/vecpat.brat@FC {start = Pos {line = 1, col = 1}, end = Pos {line = 3, col = 17}}:
fst3(Vec(Int, 3)) -> Option(Int)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
fst3(cons(x,xs)) = some(x)
^^^^^^^^^^^^^^^^^^^^^^^^^^
fst3(nil) = none
^^^^^^^^^^^^^^^^

  Unification error: Couldn't unify 0 with 3

